fix contact form on mobile

--- a/src/sass/base/_forms.scss
+++ b/src/sass/base/_forms.scss
@@ -21,5 +21,6 @@ textarea {
   &[type=submit] {
     width: auto;
     margin-left: auto;
+    appearance: none;
   }
 }
